k8s/zcp-portal-deployment-ibm.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: zcp-portal-ui
  namespace: zcp-system
spec:
  replicas: 1
  template:
    metadata:
      labels:
        component: zcp-portal-ui
    spec:
      tolerations:
      - key: "management"
        operator: "Equal"
        value: "true"
        effect: "NoSchedule"
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: beta.kubernetes.io/arch
                operator: In
                values:
                - "amd64"
              - key: role
                operator: In
                values:
                - "management"
#      initContainers:
#      - name: init-certificate
#        image: registry.au-syd.bluemix.net/cloudzcp/busybox
#        command: ['update-ca-certificates']
#        volumeMounts:
#        - name: certificate
#          mountPath: "/usr/local/share/ca-certificates/"
#          readOnly: true
      containers:
      - name: zcp-portal-ui
        image: registry.au-syd.bluemix.net/cloudzcp/zcp-portal-ui:0.9
        imagePullPolicy: Always
#        command: ['update-ca-certificates']
        ports:
        - name: cont-port
          containerPort: 8181
        volumeMounts:
        - name: certificate
          mountPath: "/usr/local/share/ca-certificates/"
          readOnly: true
      volumes:
      - name: certificate
        secret:
          secretName: kloudz-xyz-cert
---

apiVersion: v1
kind: Service
metadata:
  name: zcp-portal-ui
  labels:
    name: zcp-portal-ui
  namespace: zcp-system
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8181
    protocol: TCP
    name: http
  selector:
    component: zcp-portal-ui
